# homepage-fault-notification

./: Cargo.toml
src/: main.rs
static/css/: global.css  noto-sans-kr.css
templates/: index.html  layout.html  user.html
