[package]
name = "homepage-fault-notification"
version = "2.0.0"
authors = ["Sungjoon Kim <ted@bitflow.ai>"]
edition = "2018"

[dependencies]
hyper = "0.13.9"
hyper-tls = "0.4.3"
clokwerk = "0.3.3"
chrono = "0.4.19"
tokio = { version = "0.2", features = ["full"] }
cronjob = "0.3.17"

[build-dependencies]
